fix overflowing article image

--- a/src/articles/components/ArticleView/articleView.less
+++ b/src/articles/components/ArticleView/articleView.less
@@ -52,6 +52,10 @@
   padding: 1rem;
 }
 
+.articleText img {
+  max-width: 100%;
+}
+
 .byline {
   display: flex;
   flex-wrap: wrap;
